Added MOTD & Java server ping

--- a/mod/cross/src/main/resources/assets/ravelmod/lang/en_us.json
+++ b/mod/cross/src/main/resources/assets/ravelmod/lang/en_us.json
@@ -3,5 +3,6 @@
 
   "item.ravelcraft.wand": "Wand",
 
-  "block.ravelcraft.condensed_dirt": "Condensed Dirt"
+  "block.ravelcraft.condensed_dirt": "Condensed Dirt",
+  "block.ravelcraft.magic_block": "Magic Block"
 }
